# katip-ink

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  VERSION.md  config.yaml  debug_inject.py  diagnose.py  main.py  pyproject.toml  test_evdev.py
core/: __init__.py  app.py  config.py  state_machine.py
input/: __init__.py  evdev_handler.py  pressure.py  stylus_handler.py
recognition/: engine.py  layout.py
tests/: __init__.py  conftest.py  test_config.py  test_pressure.py  test_state_machine.py
ui/: canvas.py  options_dialog.py  overlay_window.py  palette_bar.py  result_popup.py  status_bar.py  timer_slider.py
utils/: color.py  logging_setup.py  text_injector.py  timer.py
